[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/portas.tres" type="Shape" id=1]
[ext_resource path="res://Assets/texture/Free Nobiax modular building asset texture/building_materiais.tres" type="Material" id=2]
[ext_resource path="res://Assets/objects/LowPolyDude/obj/lowpolyguyone.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/block.obj" type="ArrayMesh" id=4]
[ext_resource path="res://scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://cenas/enviroment.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/boxshape.tres" type="Shape" id=7]
[ext_resource path="res://Assets/texture/LowPolyDude texture/boots.tres" type="Material" id=8]
[ext_resource path="res://Assets/texture/LowPolyDude texture/shirt.tres" type="Material" id=9]
[ext_resource path="res://Assets/texture/LowPolyDude texture/pants.tres" type="Material" id=10]
[ext_resource path="res://Assets/texture/LowPolyDude texture/hat.tres" type="Material" id=11]
[ext_resource path="res://Assets/texture/LowPolyDude texture/skin.tres" type="Material" id=12]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/hangar_door.obj" type="ArrayMesh" id=13]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/wall_brick_1.obj" type="ArrayMesh" id=14]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/brick_double_window.obj" type="ArrayMesh" id=15]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/brick_door.obj" type="ArrayMesh" id=16]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/brick_window_1.obj" type="ArrayMesh" id=17]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/roof.obj" type="ArrayMesh" id=18]
[ext_resource path="res://scripts/cena1.gd" type="Script" id=19]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.149155, 0.916757, 0.124066 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 4.12198, 0.0431383, 4.11672 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 126.05, 118.226, 16.8107 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.25215, 1.32121, 0.169258 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 2.5, 1.32268, 0.203581 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1.27524, 1.25422, 0.174664 )

[node name="sala1" type="Spatial"]
script = ExtResource( 19 )

[node name="enviroment" parent="." instance=ExtResource( 6 )]

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.179, 0, -4.197 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 5 )

[node name="lowpolyguyone" type="MeshInstance" parent="Player"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.0783799, 0 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = ExtResource( 11 )
material/1 = ExtResource( 8 )
material/2 = ExtResource( 9 )
material/3 = ExtResource( 10 )
material/4 = ExtResource( 12 )

[node name="Camera" type="Camera" parent="Player/lowpolyguyone"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.60601, 0.10384 )
fov = 60.0

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.994295, 0 )
shape = SubResource( 1 )

[node name="SpotLight" type="SpotLight" parent="Player"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.285416, 1.1845, 0.14058 )
light_energy = 0.5
spot_angle = 25.0

[node name="chao" type="StaticBody" parent="."]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1.3, 0, -0.0485374, 0 )

[node name="CollisionShape" type="CollisionShape" parent="chao"]
shape = SubResource( 5 )

[node name="block" type="MeshInstance" parent="chao"]
transform = Transform( 0.1, 0, 0, 0, 0.001, 0, 0, 0, 0.1, -3.24876, 0, 0 )
mesh = ExtResource( 4 )
skeleton = NodePath("../CollisionShape")
material/0 = ExtResource( 2 )

[node name="walls" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.110952, 0, 0.98606 )

[node name="wall1" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.88369 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.158472, 1.28753, -0.00552112 )
shape = ExtResource( 7 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -5.14541, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="hangar_door" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -2.50864, -0.0156975, -0.00310898 )
mesh = ExtResource( 13 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="Area" type="Area" parent="walls/wall1/hangar_door"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="walls/wall1/hangar_door/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 119.778, 133.079, 0 )
shape = SubResource( 9 )

[node name="brick_window_1" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.0112305, 0, 0 )
mesh = ExtResource( 17 )
skeleton = NodePath("../wall_brick_1")
material/0 = ExtResource( 2 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.54962, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="wall2" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.93519, 0, -0.901545 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.158472, 1.28753, -0.00552112 )
shape = ExtResource( 7 )

[node name="brick_double_window" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -2.59376, 0, 0 )
mesh = ExtResource( 15 )
skeleton = NodePath("../wall_brick_2")
material/0 = ExtResource( 2 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -5.13378, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="brick_window_1" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.0659776, 0, 0 )
mesh = ExtResource( 17 )
skeleton = NodePath("../wall_brick_1")
material/0 = ExtResource( 2 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.41946, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="wall3" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5.28612, 0, -0.967991 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.158472, 1.28753, -0.00552112 )
shape = ExtResource( 7 )

[node name="brick_double_window" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -2.55028, 0, 0 )
mesh = ExtResource( 15 )
skeleton = NodePath("../wall_brick_2")
material/0 = ExtResource( 2 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -5.09523, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="brick_window_1" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.0112305, 0, 0 )
mesh = ExtResource( 17 )
skeleton = NodePath("../wall_brick_1")
material/0 = ExtResource( 2 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.54962, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="wall4" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.47891, 0, 4.15212 )

[node name="wall_brick_3" type="MeshInstance" parent="walls/wall4"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -6.24069, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("../wall_brick_2")
material/0 = ExtResource( 2 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall4"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -3.68819, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("../../porta/brick_door")
material/0 = ExtResource( 2 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall4"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 1.4283, 0, 0 )
mesh = ExtResource( 14 )
skeleton = NodePath("../../porta/brick_door")
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.70812, 1.26971, -0.0221758 )
shape = SubResource( 6 )

[node name="CollisionShape2" type="CollisionShape" parent="walls/wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.65568, 1.23946, 0 )
shape = SubResource( 7 )

[node name="porta" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.638, 0, 4.152 )

[node name="brick_door" type="MeshInstance" parent="walls/porta"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -1.288, 0, 0 )
mesh = ExtResource( 16 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="walls/porta"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30446, 0 )
shape = SubResource( 8 )

[node name="Area" type="Area" parent="walls/porta"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.914, -0.2 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="walls/porta/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.02 )
shape = ExtResource( 1 )

[node name="roof" type="StaticBody" parent="."]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1.3, -0.547713, 2.6103, -0.0894413 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="roof"]
shape = SubResource( 5 )

[node name="roof" type="MeshInstance" parent="roof"]
transform = Transform( 0.03, 0, 0, 0, 0.001, 0, 0, 0, 0.03, -4.31993, 0.0137277, -4.09525 )
mesh = ExtResource( 18 )
skeleton = NodePath("")
material/0 = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0670021, 5.03725, -0.252768 )
omni_range = 100.0
omni_shadow_mode = 0

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17866, 0, -4.19708 )

[node name="Position3D2" type="Position3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.54166, 0, 4.23453 )

[connection signal="body_entered" from="walls/wall1/hangar_door/Area" to="." method="_on_Area_body_entered2"]
[connection signal="body_entered" from="walls/porta/Area" to="." method="_on_Area_body_entered"]
